add back /coins language